--- a/src/libs/gridstack/grid.css
+++ b/src/libs/gridstack/grid.css
@@ -7,5 +7,5 @@
 }
 
 .grid-stack-placeholder > .placeholder-content {
-  @apply bg-muted/50 rounded-lg backdrop-blur !important;
+  @apply rounded-lg bg-muted/50 backdrop-blur !important;
 }
